--- a/css/mains.css
+++ b/css/mains.css
@@ -1,13 +1,3 @@
-div.token{
-  font-size: 2px;
-  color: #4CAF50;
-}
-
-div.bottons {
-  background-color: #4CAF50;
-  color: white;
-}
-
 h1.welcome {
     text-align: center;
     padding: 10px;
@@ -27,7 +17,7 @@ h1.welcome {
   }
   
   .nav-bar {
-    
+    background: linear-gradient(-90deg, rgb(0, 0, 0), rgb(125, 141, 139));
     height: 60px;
     margin-bottom: 30px;
     font-family: monospace;
@@ -35,7 +25,7 @@ h1.welcome {
   
   #chatApp {
     margin-left: 200px;
-
+    background: #fff;
     border-radius: 3px;
     padding: 20px;
     transition: all 0.2s;
@@ -45,13 +35,16 @@ h1.welcome {
     margin: 10px 0;
     font-family: monospace;
     font-size: 12pt;
+    background-color: slategray;
     padding: 10px;
     border: solid;
     border-color: black;
     border-radius: 1px;
   }
   
- 
+  del {
+    color: rgba(0, 0, 0, 0.3);
+  }
   
   .xbutton {
     font-size: 10px;
@@ -137,7 +130,7 @@ h1.welcome {
   /*  chat */
   
       body {
-
+        background: rgb(218, 218, 218);
         margin: 0 auto;
         
         padding: 0 20px;
@@ -145,10 +138,17 @@ h1.welcome {
   
       }
       
-      
+      .container {
+        border: 2px solid #dedede;
+        background-color: #f1f1f1;
+        border-radius: 5px;
+        padding: 10px;
+        margin: 10px 0;
+      }
       
       .darker {
         border-color: #ccc;
+        background-color: #ddd;
       }
       
       .container::after {
@@ -170,45 +170,22 @@ h1.welcome {
         margin-left: 20px;
         margin-right:0;
       }
-
-
-      .mains {
-        margin-left: 165px;
-    }
-
-      .bg-secondary{
-          margin-left: 165px;
-          background-color: white;
-      }
-
-      .body{
-        margin-left: 165px;
-    }
-
-
-      h6{
-        overflow-wrap: break-word;
-        word-break: break-all;
-      }
-
-      div.token{
-        font-size: 2px;
-        color: #4CAF50;
-      }
-
       
-      .button a:hover:(.active) {
-        background-color: #555;
-        color: white;
+      .time-right {
+        float: right;
+        color: #aaa;
+      }
+      
+      .time-left {
+        float: left;
+        color: #999;
       }
 
-       
-         /* Same as the width of the sidenav */
+      .main {
+        margin-left: 160px; /* Same as the width of the sidenav */
         /* font-size: 28px; Increased text to enable scrolling */
         /* padding: 0px 10px;
         }
-
-        
   
   /* .sidenav {
     height: 100%;
