--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,41 @@
+div.token{
+  font-size: 2px;
+  color: #4CAF50;
+}
+
+div.bottons {
+  background-color: #4CAF50;
+  color: white;
+}
+
 h1.welcome {
     text-align: center;
     padding: 10px;
-    color: red;
-    height: 100%;
+    color: white;
+    height: 1200%;
   
   }
   input.welcome {
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
+    width: 400px;
     display: block;
-    padding: 10px;
-    font-size: 24px;
+    padding: 8px;
+    font-size: 18px;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 2px;
   }
   
   .nav-bar {
-    background: linear-gradient(-90deg, rgb(0, 0, 0), rgb(125, 141, 139));
+    
     height: 60px;
     margin-bottom: 30px;
     font-family: monospace;
-    /* margin-bottom: 10px; */
-    /* padding-bottom: 10px; */
-    /* border: solid;
-    border-color: black;
-    border-radius: 3px; */
   }
   
-  /* body {
-    background: rgb(218, 218, 218);
-    padding: 40px;
-  } */
-  
   #chatApp {
-    background: #fff;
+    margin-left: 200px;
+
     border-radius: 3px;
     padding: 20px;
     transition: all 0.2s;
@@ -43,24 +44,21 @@ h1.welcome {
   li {
     margin: 10px 0;
     font-family: monospace;
-    font-size: 16pt;
-    background-color: slategray;
-    padding: 20px;
+    font-size: 12pt;
+    padding: 10px;
     border: solid;
     border-color: black;
-    border-radius: 3px;
+    border-radius: 1px;
   }
   
-  del {
-    color: rgba(0, 0, 0, 0.3);
-  }
+ 
   
   .xbutton {
-    font-size: 20px;
+    font-size: 10px;
     background-color: tomato;
     color: black;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 2px;
+    border-radius: 1px;
   }
   
   .padding {
@@ -70,8 +68,7 @@ h1.welcome {
     
   .flex {
     display: flex;
-    float: right;
-    width: 70%;
+    
   }
   
   .date{
@@ -82,19 +79,19 @@ h1.welcome {
   /* nav bar */
   
   .space {
-      flex-grow: 2;
+      flex-grow: 1;
     }
   
     .sidebar {
-        margin: 0;
-        padding: 0;
         width: 200px;
         background-color: #f1f1f1;
         position: fixed;
         height: 100%;
-        overflow: auto;
-        float: left;
-        
+        z-index: 1;
+        top: 0;
+        left: 0;
+        overflow-x: hidden;
+        padding-top: 20px;
       }
       
       .sidebar a {
@@ -140,25 +137,18 @@ h1.welcome {
   /*  chat */
   
       body {
-        background: rgb(218, 218, 218);
+
         margin: 0 auto;
-        max-width: 800px;
+        
         padding: 0 20px;
         height: auto;
   
       }
       
-      .container {
-        border: 2px solid #dedede;
-        background-color: #f1f1f1;
-        border-radius: 5px;
-        padding: 10px;
-        margin: 10px 0;
-      }
+      
       
       .darker {
         border-color: #ccc;
-        background-color: #ddd;
       }
       
       .container::after {
@@ -180,16 +170,38 @@ h1.welcome {
         margin-left: 20px;
         margin-right:0;
       }
-      
-      .time-right {
-        float: right;
-        color: #aaa;
+
+
+      .mains {
+        margin-left: 165px;
+    }
+
+      .bg-secondary{
+          margin-left: 165px;
+          background-color: white;
       }
-      
-      .time-left {
-        float: left;
-        color: #999;
+
+      .body{
+        margin-left: 165px;
+    }
+
+
+      h6{
+        overflow-wrap: break-word;
+        word-break: break-all;
       }
+
+      div.token{
+        font-size: 2px;
+        color: #4CAF50;
+      }
+
+      
+      .button a:hover:(.active) {
+        background-color: #555;
+        color: white;
+      }
+
   
   /* .sidenav {
     height: 100%;
