added username to message display

--- a/css/mains.css
+++ b/css/mains.css
@@ -182,7 +182,8 @@ del {
     }
 
     .main {
-      margin-left: 160px; /* Same as the width of the sidenav */
+      margin-left: 160px; 
+    }/* Same as the width of the sidenav */
       /* font-size: 28px; Increased text to enable scrolling */
       /* padding: 0px 10px;
       }
@@ -221,5 +222,3 @@ del {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
   } */
-
-  /*  */
