--- a/css/main.css
+++ b/css/main.css
@@ -75,8 +75,41 @@ h1.welcome {
     float: left;
     font-size: 12px;
   }
+  /* Top Nav*/
+  /* Add a black background color to the top navigation */
+  body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .topnav {
+      background-color:#f2f2f2;
+      overflow: hidden;
+    }
+    
+    /* Style the links inside the navigation bar */
+    .topnav a {
+      float: left;
+      color: black;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    /* Change the color of links on hover */
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    
+    /* Add a color to the active/current link */
+    .topnav a.active {
+      background-color: #ddd;
+      color: white;
+    }
+    
   
-  /* nav bar */
+  /* side nav bar */
   
   .space {
       flex-grow: 1;
@@ -205,7 +238,15 @@ h1.welcome {
       #chat-room-frm {
         margin-top: 10px;
       }
-  
+     
+      
+      
+      .time-right {
+        float: right;
+        color: #aaa;
+      }
+      
+      
   /* .sidenav {
     height: 100%;
     width: 160px;
