--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
-div.token{
+  div.token{
   font-size: 2px;
   color: #4CAF50;
-}
+  }
 
-div.bottons {
+  div.bottons {
   background-color: #4CAF50;
   color: white;
-}
+  }
 
-h1.welcome {
+    h1.welcome {
     text-align: center;
     padding: 10px;
     color: white;
@@ -26,31 +26,6 @@ h1.welcome {
     border-radius: 2px;
   }
   
-  .nav-bar {
-    
-    height: 60px;
-    margin-bottom: 30px;
-    font-family: monospace;
-  }
-  
-  #chatApp {
-    margin-left: 200px;
-
-    border-radius: 3px;
-    padding: 20px;
-    transition: all 0.2s;
-  }
-  
-  /* li {
-    margin: 10px 0;
-    font-family: monospace;
-    font-size: 12pt;
-    border: solid;
-    border-color: black;
-    border-radius: 1px;
-  } */
-  
- 
   
   .xbutton {
     font-size: 10px;
@@ -118,17 +93,28 @@ h1.welcome {
     }
   
     .sidebar {
-        width: 200px;
+        width: 215px;
         background-color: #f2f2f2;
         position: fixed;
         height: 100%;
         z-index: 1;
         top: 0;
         left: 0;
+        float: right;
         overflow-x: hidden;
         padding-top: 20px;
       }
-      
+     
+      .rightSidebar {
+        width: 200px;
+       background-color:  rgb(40, 45, 51);
+        color: white;
+        height: 100%;
+        float: right;
+        overflow-x: hidden;
+        position: initial;
+        padding-top: 32px;
+      }
       .sidebar a {
         display: block;
         color: black;
@@ -251,7 +237,6 @@ h1.welcome {
         float: right;
         color: rgb(247, 240, 240);
       }
-      
       
   /* .sidenav {
     height: 100%;
